update home by ggg_branch

--- a/home.html
+++ b/home.html
@@ -72,12 +72,12 @@
         <div class="F2_content">問答集</div>
         <div class="F3_content_left">
             <ul>
-                <li class="F3_header_text">申購單被退單原因
+                <li class="F3_header_text">申購單被退單原因:
             <ul>
                 <li class="F3_content_text">同仁自付幣別錯誤(只能選擇新台幣)</li>
                 <li class="F3_content_text">未附上採購同意mail</li>
                 <li class="F3_content_text">詳列用途說明未寫清楚 </li>
-                <li class="F3_content_text">專案代號已結案</li>
+                <li class="F3_content_text">專案代號已結案。。。。。</li>
                 <li class="F3_content_text">已有仁寶料號的測試零件申購</li>
             </ul>
                 </li>
@@ -85,7 +85,7 @@
         </div>
         <div class="F3_content_right">
             <ul>
-                <li class="F3_header_text">月結付款是入當月嗎
+                <li class="F3_header_text">月結付款是入當月嗎?
             <ul>
                 <li class="F3_content_text">採購每月22日前月結給會計(遇假日會提前)</li>
                 <li class="F3_content_text">假設驗收單中出現"已產生請款單"表示會入當月帳(實際匯款日為月份+2的15日,如10月帳就是12/15匯款)</li>
