--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
                 <li class="F3_content_text">同仁自付幣別錯誤(只能選擇新台幣)</li>
                 <li class="F3_content_text">未附上採購同意mail</li>
                 <li class="F3_content_text">詳列用途說明未寫清楚 </li>
-                <li class="F3_content_text">專案代號已結案。。。。。</li>
+                <li class="F3_content_text">專案代號已結案</li>
                 <li class="F3_content_text">已有仁寶料號的測試零件申購</li>
             </ul>
                 </li>
